<resources>
    <string name="app_name">medicare</string>
    <string name="alry_reg">Already Registered?</string>
    <string name="reg_as">Register As</string>
    <string name="user">PATIENT</string>
    <string name="Doc">DOCTOR</string>
    <string name="bkdPtnts">Booked Patients</string>
    <string name="noNot">No Notifications</string>
    <string name="sign">SIGN IN!</string>
    <string name="or">OR</string>
    <string name="reg_user">PATIENT REGISTRATION FORM</string>
    <string name="name">Name</string>
    <string name="ntfction">Notifications</string>
    <string name="cnslt">Consultation</string>
    <string name="age">age</string>
    <string name="adrs">Address</string>
    <string name="place">Place</string>
    <string name="Mob_num">Mobile Number</string>
    <string name="usrnm">Username</string>
    <string name="register">Register</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="verify">Verify</string>
    <string name="vrfyDoc">Verify Doctor</string>
    <string name="bkngs">Bookings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="phone">Phone</string>
    <string name="mail">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="vrfy">Verify With</string>
    <string name="vrymail">"Check Your Email"</string>
    <string name="gotomail">"Go To Gmail"</string>
    <string name="SigninBynum">Sign in with phone number</string>
    <string name="forgtpwd">Forgot Password?</string>
    <string name="Reset">Reset</string>
    <string name="sbmt">Submit</string>
    <string name="typenmb">Type Your Number(+91)</string>
    <string name="frgtpwdrst">Email address</string>
    <string name="dctrname">Name</string>
    <string name="hsptladrs">Hospital Address</string>
    <string name="city">City</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="eduqua">Education Qualification</string>
    <string name="Regno">Registration Number</string>
    <string name="hsptlname">Working Hospital/Clinic</string>
    <string name="dprtmnt">Department</string>
    <string name="conslttime">Consultaion Time</string>
    <string name="to">To</string>
    <string name="cnsltdays">Consultation Days</string>
    <string name="sun">Sunday</string>
    <string name="mun">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wedns">Wednesday</string>
    <string name="thir">Thursday</string>
    <string name="refd">Referred</string>
    <string name="fri">Friday</string>
    <string name="home">Home</string>
    <string name="sat">Saturday</string>
    <string name="noOfToken">Total Number Of Tokens</string>
    <string name="dctrmail">Email</string>
    <string name="dctrPhone">Phone Number</string>
    <string name="dctrPwd">Password</string>
    <string name="cnfmDctrPwd">Confirm Password</string>
    <string name="toknNo">Token Number</string>
    <string name="userId">User Id</string>
    <string name="username">Name</string>
    <string name="prscptn">Prescription</string>
    <string name="typePrsctn">Write Prescription Here</string>
    <string name="nxtTokn">Next Token</string>
    <string name="navAcnt">My Account</string>
    <string name="querySearch">Search Doctor By City Or Department"</string>
    <string name="navLogout">Logout</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_user_home">MediCare</string>
    <string name="medicare">MediCare</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bookHstry">Consult History</string>
    <string name="bookDtls">Booking Details</string>
    <string name="chatDctr">Chat With Doctor</string>
    <string name="Myacnt">My Account</string>
    <string name="Prscrptn">Prescription</string>
    <string name="tstRslt">Send Test Results</string>
    <string name="bkDoc">Book Doctor</string>
    <string name="search">Search..</string>
    <string name="cmplnt">Complaint</string>
    <string name="cmplnts">Complaints</string>
    <string name="nearby">nearby :</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="hsptalads">Hospital Address:-</string>
    <string name="days">Consult Days          :-</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="tkno">Token Number :</string>
    <string name="time">Time :</string>
    <string name="date">Date :</string>
    <string name="takeTok">Take Token</string>
    <string name="action_settings">Settings</string>
    <string name="tstRstVew">Test Result</string>
    <string name="cmnts">Other Comments</string>
    <string name="colon">:</string>
    <string name="typePstnhere">Type Prescription Here</string>
    <string name="send">Send</string>
    <string name="dctname">Doctor Name</string>
    <string name="yrTkn">Your Token</string>
    <string name="crntToken">Current Token</string>
    <string name="punc">:-</string>
    <string name="date2">Date</string>
    <string name="sbjct">Subject</string>
    <string name="upld">Upload Image</string>
    <string name="Choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="sndtst">Send Result</string>
    <string name="doc">Doctor</string>
    <string name="tstDscptn">Type Description Here</string>
    <string name="cnsltDate">Consulted Date</string>
    <string name="patientName">Patient Name</string>
    <string name="aboutPatient">About The Patient...</string>
    <string name="canclBook">Cancel Booking</string>
    <string name="tkn">Token No :</string>
    <string name="cncel">Cancel</string>
    <string name="noBook">No Booking Yet..!</string>
    <string name="title_activity_doctor_home">Home</string>
    <string name="startCnslt">Start Consultation</string>
    <string name="tstReslt">Test Results</string>
    <string name="record">Medical Record</string>
    <string name="rfrl">Referred Patients</string>
    <string name="strtsIn">Starts In...</string>
    <string name="tk">Token No</string>
    <string name="sry">Sorry.!</string>
    <string name="Noptnts">You Have No Booked Patients</string>
    <string name="refer">Refer</string>
    <string name="update">Update</string>
    <string name="refrdHistory">Referred History :-</string>
    <string name="noCnslt">"You Have No Consultation Yet.!</string>
    <string name="cnsltOn">Consulted On</string>
    <string name="reg">Regno</string>
    <string name="noMedicalRecord">You Have No Patients.!</string>
    <string name="noUsrnm">No User Found.!</string>
    <string name="ref">Refer</string>
    <string name="popsuccess">Successfully Referred</string>
    <string name="refTo">Refer To Dr.</string>
    <string name="view">View Doctor</string>
    <string name="ok">Ok</string>
    <string name="rfrFrm">Referred From</string>
    <string name="noRef">No Referred Patients.!</string>
    <string name="sndBy">Send By</string>
    <string name="ago">ago</string>
    <string name="noTst">No Test Results</string>
    <string name="title_activity_admin_home">Admin_home</string>
    <string name="slctDoc">Select Doctor</string>
    <string name="prblm">Select or type Your Compliant</string>
    <string name="issue">Or Type Your Issue</string>
    <string name="age2">Age</string>
    <string name="changePwd">Change Password</string>
    <string name="deactAcnt">Deactivate Account</string>
    <string name="typeNum">Type Your Mobile Number</string>
    <string name="accept">Accept</string>
    <string name="cnsltn">Consultation</string>
    <string name="colomn">:</string>
    <string name="myAcount">My Account</string>
    <string name="time2">Time</string>
    <string name="monday">Monday</string>
    <string name="reject">Reject</string>
    <string name="elaborate">Elaborate Your Problem...</string>
    <string name="noDctrvrfy">No Doctor Requests Found</string>
    <string name="rpotDoc">Reported Against</string>
    <string name="noCmplnt">No Complaints Are Found</string>
    <string name="against">Against To</string>
    <string name="isu">Issue</string>
    <string name="gotoDoc">View Doctor</string>
    <string name="yrTime">Your time starts Now...</string>
</resources>


