<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="60dp"
    android:foreground="@drawable/shape_window_dim"
    android:id="@+id/user_settings_sroll_layout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textNoSuggestions"
            android:textSize="25dp"
            android:id="@+id/usr_stngs_name" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="8dp"
        android:textSize="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usr_stngs_rdo_grp"
        >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/male"
        android:id="@+id/usr_stngs_rdo_male"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="120dp"
        android:text="@string/female"
        android:id="@+id/usr_stngs_rdo_female"/>
    </RadioGroup>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age2"
            android:inputType="number"
            android:id="@+id/usr_stngs_age"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adrs"
            android:inputType="textNoSuggestions"
            android:id="@+id/usr_stngs_adrs"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:id="@+id/usr_stngs_updt_btn"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mob_num"
            android:id="@+id/usr_stngs_mob_no"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:id="@+id/usr_stngs_mail"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usrnm"
            android:id="@+id/usr_stngs_usr_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
           />
    </android.support.design.widget.TextInputLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/changePwd"
    android:id="@+id/usr_stngs_change_pwd"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="3dp"
    android:textSize="20dp"/>
    <TextView
        android:id="@+id/usr_stngs_cancel_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deactAcnt"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        />
</LinearLayout>
    </ScrollView>
</FrameLayout>