<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:layout_marginLeft="20dp">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patientName"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="25dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:background="@drawable/adrs_border"
        android:layout_marginTop="20dp"
        android:hint="@string/aboutPatient"
        android:textSize="25dp"/>
</LinearLayout>