<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_prescription"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="90dp"
    android:paddingLeft="10dp"
    android:paddingRight="30dp"
    tools:context="com.jrs.medicare.Prescription">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dctname"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-33dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="160dp"
        android:textSize="22dp"
        android:id="@+id/user_prscptn_name"
        android:layout_marginTop="-30dp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Regno"
        android:textSize="22dp"
        android:layout_marginTop="20dp"
        android:lines="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-33dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:layout_marginLeft="160dp"
        android:textSize="22dp"
        android:id="@+id/user_prscptn_regNo"
        android:layout_marginTop="-30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date2"
        android:textSize="22dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-33dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date2"
        android:layout_marginLeft="160dp"
        android:textSize="22dp"
        android:id="@+id/user_prscptn_date"
        android:layout_marginTop="-30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dprtmnt"
        android:textSize="22dp"
        android:layout_marginTop="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-33dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:textSize="22dp"
        android:id="@+id/user_prscptn_dptmt"
        android:layout_marginTop="-32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Prscrptn"
        android:textSize="22dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punc"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-32dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:minLines="7"
        android:maxLines="50"
        android:background="@drawable/adrs_border"
        android:layout_marginTop="20dp"
        android:id="@+id/user_prscptn"
        android:textSize="25dp"
        android:gravity="start"
        />
</LinearLayout>
