<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tstRstVew"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/adrs_border"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="200dp"/>
    <TextView
        android:id="@+id/textView27"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cmnts"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:lines="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-33dp"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-32dp"
        android:background="@drawable/adrs_border"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="30dp"
        android:hint="@string/typePstnhere"
        android:layout_marginTop="20dp"
        android:background="@drawable/adrs_border"
        android:gravity="start"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbmt"
        android:layout_gravity="right"
        android:layout_marginRight="28dp"/>
</LinearLayout>