<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/token_recycleView"
    android:background="@drawable/text_view_border_color_accent"
    >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tkn"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"/>
    <Button
        android:background="@drawable/button_red_color"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/cncel"
        android:layout_alignParentRight="true"
        android:id="@+id/rec_btn"/>
    <TextView
        android:id="@+id/rec_tkno"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tkn"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView7"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dctname"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/rec_name"
        android:layout_below="@+id/rec_tkno"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date2"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:layout_below="@+id/rec_name"
        android:id="@+id/rec_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/rec_time"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="2dp"
        android:textSize="18dp"
       android:layout_alignParentRight="true"
        android:layout_below="@id/rec_btn"
        android:layout_alignTop="@+id/rec_date"
        android:layout_alignRight="@+id/rec_date"/>
</RelativeLayout>